mongoClient.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-client
spec:
  containers:
  - name: mongo-client
    image: mongo
    command: [ "sleep", "3600" ] # Keeps the pod alive
