node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
    - name: private-reg-container
      image: omarismail0/kubernetes-project:latest
  imagePullSecrets:
    - name: regcred
